styles.css
body {
  background: black;
}
a{
    text-decoration: none;
    color: white;
}
.flex-container {
   display:flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
    
}


.flex-container .div {
    height: 500px;
    width: 1500px;
    flex: 1;
}


.flex-container .one {
    background: #1f2937;
    padding: 16px; 
    height: 500px;
    width: 1500px;
}
 .flex-container .HeaderBox{
    
    height:100px;
    width:1500px;
    text-align: right;
    position:relative;
   

}
.HeaderLogo{
    font-size: 18px;
    color:white;
    position:absolute;
    text-align: left;
    margin-left: 15%;
   

}
.flex-container .Body{
    height:350px;
    width:700px;
    
   
}
.HeaderLink{
    font-size: 18px;
    color: white;
    
}
   .flex-container .bodyText{
    height:100px;
    width:300px;
    font-size:48px;
    color: white;
    text-align: left;
    margin-left: 32%;
   overflow-wrap: break-word;
    
}

.flex-container .subText{
    height:60px;
    width:300px;
    font-size: 18px;
    color:white;
    padding-bottom:20px;
   
}
.flex-container .signup{
   
    font-size: 20px;
    text-align: center;
    border-radius:25px;
    background-color: #3882F6;
    width: 125px;
    
}




.flex-container .two {
    
    background: white;
    height: 500px;
    width: 1500px;
}
.contentTwo{
    text-align: center;
    color:#3882F6;
}
.flex-container .three{
    background: #E5E7EB;
}
.flex-container .four{
    background: white;
}

